custom: add personal config

--- a/dots/.config/hypr/custom/keybinds.conf
+++ b/dots/.config/hypr/custom/keybinds.conf
@@ -8,4 +8,4 @@ bind = Ctrl+Super+Alt, Slash, exec, xdg-open ~/.config/hypr/custom/keybinds.conf
 # Use #! to add an extra column on the cheatsheet
 # Use ##! to add a section in that column
 # Add a comment after a bind to add a description, like above
-
+bind = , XF86Launch1, exec, rog-control-center # Open ROG control center
