--- a/dots/.config/hypr/custom/rules.conf
+++ b/dots/.config/hypr/custom/rules.conf
@@ -1,3 +1,35 @@
 # You can put custom rules here
 # Window/layer rules: https://wiki.hyprland.org/Configuring/Window-Rules/
 # Workspace rules: https://wiki.hyprland.org/Configuring/Workspace-Rules/
+
+windowrulev2 = workspace 1, class:^(discord)$
+windowrulev2 = workspace 1, class:^(com.rtosta.zapzap)$
+windowrulev2 = workspace 2, class:^(notion-desktop)$
+windowrulev2 = workspace 3, class:^(thunderbird)$
+windowrulev2 = workspace 4, class:^(com.github.th_ch.youtube_music)$
+windowrulev2 = workspace 7, class:^(code)$
+windowrulev2 = workspace 7, class:^(dev.zed.Zed)$
+windowrulev2 = workspace 8, class:^(dbgate)$
+
+windowrulev2 = float, class:^(steam)$
+windowrulev2 = float, class:^(zoom)$
+windowrulev2 = float, class:^(pavucontrol-qt)$
+windowrulev2 = size 45%, class:^(pavucontrol-qt)$
+windowrulev2 = center, class:^(pavucontrol-qt)$
+windowrulev2 = noblur, floating:1
+windowrulev2 = noborder, floating:1
+windowrulev2 = noshadow, floating:1
+windowrulev2 = noblur, class:^(Xdg-desktop-portal-gtk)$
+windowrulev2 = noborder, class:^(Xdg-desktop-portal-gtk)$
+windowrulev2 = noshadow, class:^(Xdg-desktop-portal-gtk)$
+
+windowrulev2 = float, class:^(com.obsproject.Studio)$, title:^(Fullscreen Projector.*)$
+windowrulev2 = size 100%, class:^(com.obsproject.Studio)$, title:^(Fullscreen Projector.*)$
+windowrulev2 = workspace 6, class:^(com.obsproject.Studio)$, title:^(Fullscreen Projector.*)$
+windowrulev2 = float, class:^(wpp)$, title:^(WPS Presentation Slide Show.*)$
+windowrulev2 = size 100%, class:^(wpp)$, title:^(WPS Presentation Slide Show.*)$
+windowrulev2 = workspace 6, class:^(wpp)$, title:^(WPS Presentation Slide Show.*)$
+
+# windowrulev2 = float, initialClass:^(et)$, initialTitle:^(et)$
+# windowrulev2 = float, initialClass:^(wpp)$, initialTitle:^(wpp)$
+# windowrulev2 = float, initialClass:^(wps)$, initialTitle:^(wps)$
