--- a/dots/.config/hypr/custom/env.conf
+++ b/dots/.config/hypr/custom/env.conf
@@ -1,2 +1,8 @@
 # You can put extra environment variables here
 # https://wiki.hyprland.org/Configuring/Environment-variables/
+
+# ROG
+# env = LIBVA_DRIVER_NAME,nvidia
+# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+env XDG_SESSION_TYPE=x11 zoom
