--- a/dots/.config/hypr/custom/execs.conf
+++ b/dots/.config/hypr/custom/execs.conf
@@ -1,2 +1,17 @@
 # You can make apps auto-start here
 # Relevant Hyprland wiki section: https://wiki.hyprland.org/Configuring/Keywords/#executing
+
+exec-once = zapzap
+exec-once = discord
+exec-once = sh -c "sleep 5 && nextcloud"
+exec-once = sh -c "sleep 5 && OneDriveGUI"
+exec-once = notion-desktop
+exec-once = [workspace 3 silent] thunderbird
+exec-once = systemctl --user start hyprpolkitagents
+
+# ROG
+# exec-once = rog-control-center
+
+# DELL
+# exec-once = systemctl --user import-environment XDG_SESSION_TYPE WAYLAND_DISPLAY DISPLAY DBUS_SESSION_BUS_ADDRESS
+# exec-once = systemctl --user import-environment $(grep -v '^#' ~/.config/environment.d/10-intel.conf | cut -d= -f1)
