--- a/dots/.config/hypr/custom/general.conf
+++ b/dots/.config/hypr/custom/general.conf
@@ -1,2 +1,26 @@
 # Put general config stuff here
 # Here's a list of every variable: https://wiki.hyprland.org/Configuring/Variables/
+monitor=,preferred,auto,1,transform, 0
+monitor=FALLBACK,1920x1080@60,auto,1
+
+cursor {
+    no_warps = true
+}
+
+input {
+    follow_mouse = 0
+}
+
+general {
+    border_size = 0
+}
+
+animations {
+    enabled = false
+}
+
+decoration {
+    shadow {
+        enabled = false
+    }
+}
