--- a/dots/.config/hypr/custom/general.conf
+++ b/dots/.config/hypr/custom/general.conf
@@ -15,12 +15,44 @@ general {
     border_size = 0
 }
 
-animations {
-    enabled = false
-}
-
 decoration {
     shadow {
         enabled = false
     }
+}
+
+animations {
+    enabled = true
+    bezier = expressiveFastSpatial, 0.42, 1.67, 0.21, 0.90
+    bezier = expressiveSlowSpatial, 0.39, 1.29, 0.35, 0.98
+    bezier = expressiveDefaultSpatial, 0.38, 1.21, 0.22, 1.00
+    bezier = emphasizedDecel, 0.05, 0.7, 0.1, 1
+    bezier = emphasizedAccel, 0.3, 0, 0.8, 0.15
+    bezier = standardDecel, 0, 0, 0, 1
+    bezier = menu_decel, 0.1, 1, 0, 1
+    bezier = menu_accel, 0.52, 0.03, 0.72, 0.08
+
+    # Animation curves
+    bezier = specialWorkSwitch, 0.05, 0.7, 0.1, 1
+    bezier = emphasizedAccel, 0.3, 0, 0.8, 0.15
+    bezier = emphasizedDecel, 0.05, 0.7, 0.1, 1
+    bezier = standard, 0.2, 0, 0, 1
+
+    # Animation configs
+    animation = layersIn, 1, 2.5, emphasizedDecel, slide
+    animation = layersOut, 1, 2, emphasizedAccel, slide
+    animation = fadeLayers, 1, 2.5, standard
+
+    animation = windowsIn, 1, 2.5, emphasizedDecel
+    animation = windowsOut, 1, 1.5, emphasizedAccel
+    animation = windowsMove, 1, 3, standard
+
+    #animation = specialWorkspace, 1, 2, specialWorkSwitch, slidefadevert 15%
+    animation = workspaces, 1, 3.5, menu_decel, slide
+    animation = specialWorkspaceIn, 1, 1.4, emphasizedDecel, slidevert
+    animation = specialWorkspaceOut, 1, 0.6, emphasizedAccel, slidevert
+
+    animation = fade, 0, 3, standard
+    animation = fadeDim, 0, 3, standard
+    animation = border, 0, 3, standard
 }
